--- a/notes/note_week7.qmd
+++ b/notes/note_week7.qmd
@@ -1,6 +1,11 @@
 ---
-title: "Week 5 Demonstration"
-format: html
+title: "Week 7 note"
+author: "Wang Zixuan"
+format:
+  pdf:
+    toc: true
+    toc-depth: 3 
+    number-sections: true 
 editor: visual
 ---
 
